--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div>
     </header>
     <section class="block__5">
-        <img src="/img/unsplash_1lGeOg6IULc.svg" class="service__img">
+        <img src="./img/unsplash_1lGeOg6IULc.svg" class="service__img">
         <div class="buttons">
             <div class="dropdown">
                 <button class="dropbtn">photography</button>
@@ -244,7 +244,7 @@
             </div>
         </div>
     </footer>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
